--- a/app/src/main/res/layout/locate_tab.xml
+++ b/app/src/main/res/layout/locate_tab.xml
@@ -1,12 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.ongteckwu.travelapp.LocateTab">
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_gravity="center_horizontal"
-        android:text="Locate" />
-</LinearLayout>
+        android:inputType="textPersonName"
+        android:text=""
+        android:ems="10"
+        android:id="@+id/search_bar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/search_bar"
+        android:layout_toEndOf="@+id/search_bar"
+        android:id="@+id/enter" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/enter"
+        android:layout_marginTop="0dp"
+        android:id="@+id/results"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="375dp"
+        android:layout_alignParentBottom="true"
+        tools:context="com.example.ongteckwu.travelapp"
+        />
+
+    <RadioGroup
+        android:id="@+id/radio_grp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/results"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <RadioButton
+            android:text="Map View"
+            android:layout_width="141dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/map_view"
+            android:layout_alignBaseline="@+id/sat_view"
+            android:layout_alignBottom="@+id/sat_view"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="0.28" />
+
+        <RadioButton
+            android:text="Satellite View"
+            android:layout_width="127dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/sat_view"
+            android:layout_above="@+id/map"
+            android:layout_toRightOf="@+id/map_view"/>
+
+    </RadioGroup>
+
+
+</RelativeLayout>
