--- a/app/src/main/res/layout/activity_paul.xml
+++ b/app/src/main/res/layout/activity_paul.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
@@ -7,6 +6,8 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:fitsSystemWindows="true">
+
+    <include layout="@layout/top_main_paul" />
 
     <include layout="@layout/content_paul" />
 
