--- a/app/src/main/res/layout/top_main.xml
+++ b/app/src/main/res/layout/top_main.xml
@@ -39,11 +39,9 @@
             <android.support.design.widget.TabItem
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:text="last"/>
+                android:text="weather"/>
 
         </android.support.design.widget.TabLayout>
     </LinearLayout>
-
-
 
 </android.support.design.widget.AppBarLayout>
